--- a/FormCreator/src/style.scss
+++ b/FormCreator/src/style.scss
@@ -1,10 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
+
 body,
 html {
     margin: 0;
     padding: 0;
-    font-style: 16px;
+    font-size: 16px;
+    height: 100%;
+    width: 100%;
+    background-color: #ede7f6;
+    font-family: 'Roboto', sans-serif;
 }
 $colorLink: #0e153a;
+$colorBorder: #4285f4;
+$saveColor: #4285f4;
+$backColor: #333333;
+$colorBorderField: rgb(61, 143, 45);
+$colorText: #333333;
+$colorInputBorder: #333333;
+$whiteText: #ffffff;
+$accent: #FA2D42 ;
+$radius: 4px;
+h1{
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    font-size: 30px;
+}
+button{
+    border: none;
+    background: none;
+    font-size: 100%;
+    outline: none;
+    border-radius: $radius;
+    cursor: pointer;
+}
+
 
 .form-creator-index {
     height: 100vh;
@@ -39,6 +69,180 @@ $colorLink: #0e153a;
         .big-link {
             width: 100vw;
             font-size: 20px;
+        }
+    }
+}
+
+//stylle to new docuemnt html
+#main{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    #new-document{
+        margin: 90px 15px 0;
+        width: 100%;
+        max-width: 770px;
+        #action-wrapper{
+            display: flex;
+        }
+    }
+    #form-creator{
+        margin: 90px 15px 0;
+        width: 100%;
+        max-width: 770px;
+        .header{
+            display: flex;
+            flex-flow: row;
+        }
+        #quantity{
+            border-radius: $radius;
+            border: 1px solid $colorInputBorder;
+            font-size: 14px;
+            max-width: 40px;
+            color: $colorText;
+            padding: 10px 15px;
+            outline: none;
+            margin: 5px;
+            transition: .2s;
+            &:focus{
+                border-color: $colorBorder;
+            }
+
+        }
+    }
+    #edit-document, #document-list{
+        margin: 90px 15px 0;
+        width: 100%;
+        max-width: 770px;
+        #list-forms, #list-documents{
+            .list-documents{
+                padding: 0;
+                margin: 0;
+                list-style-type: none;
+                li{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    border-bottom: 2px solid $saveColor;
+                    a{
+                        margin: 5px;
+                        font-size: 18px;
+                        color: $colorText;
+                        text-decoration: none;
+                        outline: none;
+                        font-weight: bold;
+                        &:hover{
+                            color: $saveColor;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    #listInputs{
+        display: none;
+        &.generate{
+            display: flex;
+        }
+    }
+    #action-wrapper{
+        flex-flow: row;
+        display: none;
+        &.show-action{
+            display: flex;
+        }
+       
+    }
+    .panel{
+        box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.141), 0 1px 3px 0 rgba(0,0,0,0.122);
+        transition: box-shadow 280ms cubic-bezier(0.4,0.0,0.2,1);
+        border: 1px solid #dadce0;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        position: relative; 
+        padding: 20px;
+        margin-bottom: 20px;
+        &:before{
+            content: "";
+            left: 0;
+            top: 0;
+            width: 4px;
+            background-color: $colorBorder;
+            height: 100%;
+            width: 4px;
+            position: absolute;
+            border-radius: 4px 0px 0px 4px;
+        }
+        &:nth-child(2){
+            &:before{
+                background-color: $colorBorderField;
+            }
+        }
+    }
+}
+
+
+.save-action{
+    background-color: $saveColor;
+    color:$whiteText;
+    padding: 10px 15px;
+    margin: 5px;
+}
+.generate-action{
+    background-color: $saveColor;
+    color:$whiteText;
+    padding: 10px 15px;
+    margin: 5px;
+}
+.remove-action, .delete-action{
+    background-color: $accent;
+    color:$whiteText;
+    padding: 10px 15px;
+    margin: 5px;
+}
+.back-action{
+    background-color: $backColor;
+    color:$whiteText;
+    padding: 10px 15px;
+    margin: 5px;
+}
+.form-group{
+    display: flex;
+    flex-flow: column;
+    label{
+        font-size: 16px;
+        color:$colorText;
+        margin-bottom: 5px;
+    }
+    input, select, textarea{
+        border-radius: $radius;
+        border: 1px solid $colorInputBorder;
+        font-size: 14px;
+        color: $colorText;
+        padding: 10px;
+        outline: none;
+        transition: .2s;
+        &:focus{
+            border-color: $colorBorder;
+        }
+    }
+    select{
+        background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png) no-repeat;
+        -webkit-appearance: none;
+        background-position: calc(100% - 10px) center;
+        background-size: 11px 11px;
+    }
+    margin-bottom: 10px;
+    &.check-group{
+        display: flex;
+        flex-flow:row-reverse;
+        align-items: center;
+        justify-content: flex-end;
+        label{
+            margin: 0;
+            margin-left: 5px;
         }
     }
 }
